k8s/staybit/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staybit
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3001
          - path: /reservations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 3004
